--- a/Api/packages.config
+++ b/Api/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="3.3.0" targetFramework="net45" />
+  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
+  <package id="ConfigR" version="0.11.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
@@ -18,5 +21,10 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="ScriptCs.Contracts" version="0.9.0" targetFramework="net45" />
+  <package id="ScriptCs.Core" version="0.9.0" targetFramework="net45" />
+  <package id="ScriptCs.Engine.Roslyn" version="0.9.0" targetFramework="net45" />
   <package id="System.IdentityModel.Tokens.Jwt" version="3.0.2" targetFramework="net45" />
 </packages>
