--- a/Website/packages.config
+++ b/Website/packages.config
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
+  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
+  <package id="ConfigR" version="0.11.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="ScriptCs.Contracts" version="0.9.0" targetFramework="net45" />
+  <package id="ScriptCs.Core" version="0.9.0" targetFramework="net45" />
+  <package id="ScriptCs.Engine.Roslyn" version="0.9.0" targetFramework="net45" />
 </packages>
