--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -35,7 +35,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration.cs" />
+    <Compile Include="ApiConfiguration.cs" />
+    <Compile Include="CoreConfiguration.cs" />
+    <Compile Include="WebsiteConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
