--- a/Website/Web.config
+++ b/Website/Web.config
@@ -5,10 +5,11 @@
   -->
 <configuration>
 
-    <!--<appSettings>
+    <appSettings>
     <add key="owin:HandleAllRequests" value="true" />
     <add key="owin:SetCurrentDirectory" value="true" />
-  </appSettings>-->
+    <add key="owin:appStartup" value="Website" />
+  </appSettings>
     
   <system.web>
     <customErrors mode="Off" />
