--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -153,7 +153,7 @@
     <Compile Include="InfoController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelfHost.cs" />
-    <Compile Include="ApiStartup.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="WebApiConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
