--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -109,7 +109,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoreStartup.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="CustomBootstrapper.cs" />
     <Compile Include="InfoModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
